Moved struct types into package models
