# docs/swagger.json
@@ -20,7 +20,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.CpuResponse"
+                            "$ref": "#/definitions/models.CpuResponse"
                         }
                     },
                     "500": {
@@ -43,7 +43,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HelloResponse"
+                            "$ref": "#/definitions/models.HelloResponse"
                         }
                     }
                 }
@@ -60,7 +60,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.MemoryResponse"
+                            "$ref": "#/definitions/models.MemoryResponse"
                         }
                     },
                     "500": {
@@ -98,7 +98,7 @@
                     "101": {
                         "description": "Switching Protocols",
                         "schema": {
-                            "$ref": "#/definitions/handlers.WebsocketResponse"
+                            "$ref": "#/definitions/models.WebsocketResponse"
                         }
                     }
                 }
@@ -106,7 +106,7 @@
         }
     },
     "definitions": {
-        "handlers.CpuResponse": {
+        "models.CpuResponse": {
             "type": "object",
             "properties": {
                 "usage": {
@@ -114,7 +114,7 @@
                 }
             }
         },
-        "handlers.HelloResponse": {
+        "models.HelloResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -122,7 +122,7 @@
                 }
             }
         },
-        "handlers.MemoryResponse": {
+        "models.MemoryResponse": {
             "type": "object",
             "properties": {
                 "available": {
@@ -148,11 +148,11 @@
                 }
             }
         },
-        "handlers.WebsocketResponse": {
+        "models.WebsocketResponse": {
             "type": "object",
             "properties": {
                 "payload": {
-                    "$ref": "#/definitions/handlers.MemoryResponse"
+                    "$ref": "#/definitions/models.MemoryResponse"
                 }
             }
         }
