# handlers/cpu.go
@@ -5,31 +5,29 @@ import (
 	"net/http"
 	"time"
 
-    "github.com/shirou/gopsutil/v4/cpu"
-)
+	"go-api/models"
 
-type CpuResponse struct {
-	Usage float64 `json:"usage"`
-}
+	"github.com/shirou/gopsutil/v4/cpu"
+)
 
 // Cpu handles the GET /cpu request.
 // @Summary Get CPU usage
 // @Description Returns the current CPU usage percentage measured over a 1-second interval
 // @Produce json
-// @Success 200 {object} CpuResponse
+// @Success 200 {object} models.CpuResponse
 // @Failure 500 {string} string "Internal Server Error"
 // @Router /cpu [get]
 func Cpu(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 
-    percent, err := cpu.Percent(time.Second, false)
+	percent, err := cpu.Percent(time.Second, false)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
-	response := CpuResponse{
+	response := models.CpuResponse{
 		Usage: percent[0],
 	}
 	json.NewEncoder(w).Encode(response)
