# models/cpu.go
@@ -1,0 +1,6 @@
+package models
+
+// CpuResponse represents the JSON response for the CPU usage endpoint.
+type CpuResponse struct {
+	Usage float64 `json:"usage"`
+}
