# models/websocket.go
@@ -1,0 +1,6 @@
+package models
+
+// WebsocketResponse represents the JSON response broadcasted by the WebSocket.
+type WebsocketResponse struct {
+	Payload *MemoryResponse `json:"payload"`
+}
